[package]
authors     = [ "t3rn ltd. <team@t3rn.io>" ]
description = "XBI Substrate contracts ABI"
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "substrate-contracts-abi"
repository  = "https://github.com/t3rn/xbi/"
version     = "0.3.7"

[dependencies]
log = { version = "0.4", default-features = false }

codec      = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

sp-core    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "6.0.0" }
sp-std     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "4.0.0" }

substrate-abi = { path = "../sabi", default-features = false, version = "0.3" }

[features]
default = [ "std" ]
std     = [ "sp-std/std", "sp-core/std", "sp-runtime/std", "substrate-abi/std", "scale-info/std", "codec/std", "log/std" ]
