[package]
edition = "2021"
name    = "t3rn-xcm-primitives"
version = "0.3.0"
authors     = [ "t3rn <team@t3rn.io>" ]
repository  = "https://github.com/t3rn/xbi"
license     = "Apache-2.0"

[dependencies]
codec  = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [ 'derive' ] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
xcm    = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.27", default-features = false }

xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false, optional = true }

[features]
default   = [ "std", "frame-std" ]
frame     = [ "xcm-executor" ]
frame-std = [ "xcm-executor/std" ]
std       = [ "xcm/std", "codec/std", "sp-std/std" ]
