[package]
authors    = [ "t3rn <team@t3rn.io>" ]
edition    = "2021"
license    = "Apache-2.0"
name       = "t3rn-xcm-primitives"
repository = "https://github.com/t3rn/xbi"
version    = "0.3.0"

# TODO: determine if we should just move these somewhere. Also rename to xp-xcm (xbi primitives xcm)

[dependencies]
codec  = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [ 'derive' ] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
xcm    = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.27", default-features = false }

xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false, optional = true }

[features]
default   = [ "std", "frame-std" ]
frame     = [ "xcm-executor" ]
frame-std = [ "xcm-executor/std" ]
std       = [ "xcm/std", "codec/std", "sp-std/std" ]
