[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "Primitives that support xcm and xbi development"
edition     = "2021"
license     = "Apache-2.0"
name        = "xp-xcm"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.7"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ 'derive' ] }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0" }

xcm          = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", version = "0", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", version = "0", default-features = false, optional = true }

[features]
default   = [ "std", "frame", "frame-std" ]
frame     = [ "xcm-executor" ]
frame-std = [ "xcm-executor/std" ]
std       = [ "xcm/std", "codec/std", "sp-std/std" ]
