[package]
name = "pallet-xbi-evm-enter-precompile"
version = "1.0.0-dev"
authors = ["t3rn team@t3rn.io"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://t3rn.io"
repository = "https://github.com/t3rn/t3rn/"
description = "Enter XBI Portal from EVM Precompile"

[dependencies]
frame-system = {  git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.19" }
frame-support = {  git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.19" }

fp-evm = {  git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19", default-features = false }
pallet-evm = {   git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19", default-features = false }
pallet-xbi-portal = {  path = "../..", default-features = false }

[features]
default = ["std"]
std = [
	"frame-system/std",
	"frame-support/std",
	"fp-evm/std",
	"pallet-evm/std",
	"pallet-xbi-portal/std",
]
