[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "A slim runtime for cross-chain messages tests."
edition     = "2021"
license     = "Apache-2.0"
name        = "slim"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.0"

[dependencies]
codec      = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1", default-features = false, features = [ "derive" ] }
serde      = { version = "1.0.137", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "4.0.0-dev" }
frame-system  = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "4.0.0-dev" }

pallet-assets    = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "4.0.0-dev" }
pallet-aura      = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "4.0.0-dev" }
pallet-balances  = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "4.0.0-dev" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "4.0.0-dev" }

sp-core    = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "6.0.0" }
sp-io      = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "6.0.0" }
sp-std     = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", version = "4.0.0" }

cumulus-pallet-dmp-queue        = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.27", version = "0.1.0" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.27", version = "0.1.0" }
cumulus-pallet-xcm              = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.27", version = "0.1.0" }
cumulus-pallet-xcmp-queue       = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.27", version = "0.1.0" }
cumulus-parachains-common       = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.27", version = "0.9.27", package = "parachains-common" }
cumulus-primitives-utility      = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.27", version = "0.1.0" }
parachain-info                  = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.27", version = "0.1.0" }

pallet-xcm                  = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27", version = "0.9.27" }
polkadot-parachain          = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27", version = "0.9.27" }
polkadot-primitives         = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27", version = "0.9.27" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27", version = "0.9.27" }
xcm                         = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27", version = "0.9.27" }
xcm-builder                 = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27", version = "0.9.27" }
xcm-executor                = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27", version = "0.9.27" }

evm-precompile-util       = { default-features = false, git = "https://github.com/t3rn/t3rn", branch = "development", package = "precompile-util" }
pallet-3vm-evm            = { default-features = false, git = "https://github.com/t3rn/t3rn", branch = "development", package = "pallet-evm" }
pallet-3vm-evm-primitives = { default-features = false, git = "https://github.com/t3rn/t3rn", branch = "development", package = "fp-evm" }
t3rn-primitives           = { default-features = false, git = "https://github.com/t3rn/t3rn", branch = "development" }

# evm-precompile-util       = { path = "../../../../3vm/pallets/evm/precompile/util", package = "precompile-util" }
# pallet-3vm-evm            = { path = "../../../../3vm/pallets/evm", package = "pallet-evm" }
# pallet-3vm-evm-primitives = { path = "../../../../3vm/primitives/evm", package = "fp-evm" }

# XBI
pallet-asset-registry = { path = "../../pallets/asset-registry", default-features = false }
pallet-xbi-portal     = { path = "../../pallets/portal", default-features = false }

[features]
default = [ "std" ]
no_std = [  ]
std = [
  "serde/std",
  "codec/std",
  "scale-info/std",

  "sp-runtime/std",
  "sp-io/std",
  "sp-std/std",
  "sp-core/std",
  "pallet-balances/std",
  "pallet-aura/std",
  "pallet-timestamp/std",
  "pallet-assets/std",
  "frame-support/std",
  "frame-system/std",

  "cumulus-pallet-dmp-queue/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-parachains-common/std",
  "parachain-info/std",
  "cumulus-primitives-utility/std",

  "t3rn-primitives/std",
  "pallet-3vm-evm/std",
  "pallet-3vm-evm-primitives/std",
  "evm-precompile-util/std",

  "xcm/std",
  "xcm-executor/std",
  "polkadot-parachain/std",
  "xcm-builder/std",
  "pallet-xcm/std",
  "polkadot-runtime-parachains/std",
  "polkadot-primitives/std",

  "pallet-asset-registry/std",
  "pallet-xbi-portal/std",
]
