[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "An asset registry providing asset capabilities for t3rn"
edition     = "2021"
license     = "Apache-2.0"
name        = "pallet-asset-registry"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.7"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec      = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
log        = "0.4"
scale-info = { version = "2.3.0", default-features = false, features = [ "derive" ] }

sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std     = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Optional
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

xcm          = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-builder  = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }

xp-channel = { path = "../../crates/channel-primitives", default-features = false, features = [ "frame" ] }
xp-xcm     = { path = "../../crates/xcm-primitives", default-features = false, features = [ "frame" ] }

t3rn-primitives = { default-features = false, git = "https://github.com/t3rn/t3rn", branch = "build/update-v1" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

pallet-assets   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[features]
default = [ "std" ]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
]
std = [
  "codec/std",
  "log/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "xcm/std",
  "xcm-executor/std",
  "xcm-builder/std",
  "xp-channel/frame-std",
  "xp-xcm/frame-std",
  "xp-xcm/std",
  "xp-channel/std",
  "t3rn-primitives/std",
]
try-runtime = [ "frame-support/try-runtime", "frame-system/try-runtime" ]
