[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "Definition of calls to enter XBI Portal - lightweight (little deps to other pallets, no storage, no events) in design"
edition     = "2021"
name        = "pallet-xbi-portal-enter"
version     = "0.9.19"

[dependencies]
codec                 = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
impl-trait-for-tuples = "0.2.2"
log                   = { version = "0.4", default-features = false }
scale-info            = { version = "2", default-features = false, features = [ "derive" ] }

pallet-xbi-portal = { path = "../portal", default-features = false }
t3rn-primitives   = { default-features = false, git = "https://github.com/t3rn/t3rn", branch = "chore/update-flow" }

pallet-xcm = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.19", default-features = false }
xcm        = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.19", default-features = false }

cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
frame-benchmarking      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, optional = true }
frame-support           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-arithmetic           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-core                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-io                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks", "pallet-xbi-portal/runtime-benchmarks", "sp-runtime/runtime-benchmarks" ]
std = [
  "codec/std",
  "scale-info/std",
  "xcm/std",
  "cumulus-primitives-core/std",
  "pallet-xbi-portal/std",
  "pallet-xcm/std",
  "sp-std/std",
  "sp-io/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "t3rn-primitives/std",
]

[workspace]
