[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "An full featured XBI channel."
edition     = "2021"
name        = "pallet-xbi-portal"
version     = "0.3.0"

[dependencies]
codec                 = { package = "parity-scale-codec", version = "3", default-features = false }
impl-trait-for-tuples = "0.2.2"
log                   = { version = "0.4.14", default-features = false }
scale-info            = { version = "2.1.1", default-features = false, features = [ "derive" ] }
serde                 = { default-features = false, version = "1.0", optional = true }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, optional = true }
frame-support      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-inherents  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-io         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

substrate-abi           = { path = "../../crates/sabi", default-features = false }
substrate-contracts-abi = { path = "../../crates/scabi", default-features = false }
xbi-channel-primitives  = { path = "../../crates/channel-primitives", default-features = false, features = [ "frame" ] }
xbi-format              = { path = "../../crates/xbi-format", default-features = false }
xbi-receiver            = { path = "../../crates/receiver", default-features = false, features = [ "frame" ] }
xbi-sender              = { path = "../../crates/sender", default-features = false, features = [ "frame" ] }
xcm-primitives          = { path = "../../crates/xcm-primitives", default-features = false, package = "t3rn-xcm-primitives", features = [ "frame" ] }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }

contracts-primitives = { git = "https://github.com/t3rn/t3rn", branch = "feature/xbi-expose", default-features = false, package = "pallet-contracts-primitives" }
evm-primitives       = { git = "https://github.com/t3rn/t3rn", branch = "feature/xbi-expose", default-features = false, package = "fp-evm" }
t3rn-primitives      = { git = "https://github.com/t3rn/t3rn", branch = "development", default-features = false }

[dev-dependencies]
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27" }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]
std = [
  "codec/std",
  "scale-info/std",
  "xcm/std",
  "serde/std",
  "sp-std/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "contracts-primitives/std",
  "evm-primitives/std",
  "log/std",
  "xbi-sender/std",
  "xbi-sender/frame-std",
  "xbi-channel-primitives/std",
  "xbi-channel-primitives/frame-std",
  "xcm-primitives/frame-std",
  "xcm-primitives/std",
  "xbi-receiver/std",
  "xbi-format/std",
  "xbi-receiver/frame-std",
  "substrate-abi/std",
  "substrate-contracts-abi/std",
  "t3rn-primitives/std",
]
